Bug 313644 - The installer is not listing pt-br (portugueses from Brazil) among the languages
Summary: The installer is not listing pt-br (portugueses from Brazil) among the languages
Status: RESOLVED FIXED
Alias: None
Product: kde-windows
Classification: Unmaintained
Component: installer (other bugs)
Version First Reported In: 4.8
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: KDE-Windows
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-01-21 18:02 UTC by Leonardo Barichello
Modified: 2013-01-21 21:55 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Leonardo Barichello 2013-01-21 18:02:00 UTC
The installer is not listing pt-br (portugueses from Brazil) among the languages.
The error was verified at Windows XP and Windows 7 and installer versions 0.9.9.4 and 0.9.9.7.
At july 20011 (with kde 4.7), everything was working fine.

Moreover, I checked and all the needed files are available at the repository (http://www.winkde.org/pub/kde/ports/win32/repository-4.8/kde/) and after a manual installation, the language works fine.
The last 2 things I realized: "pt_BR" is the only language code with the sintax "??_??" and using capitalyzed letter.

Reproducible: Always

Steps to Reproduce:
1. Run the installer and try to select pt_BR in the Language package section
Actual Results:  
pt_BR is not listed

Expected Results:  
Lists pt_BR
Comment 1 Ralf Habacker 2013-01-21 21:54:29 UTC
The same issue happens with zh_... language files.
Comment 2 Ralf Habacker 2013-01-21 21:55:21 UTC
Git commit f6e526a00b5b0aea4db62665c6439205a4496c11 by Ralf Habacker.
Committed on 21/01/2013 at 22:48.
Pushed by habacker into branch 'master'.

Fixed wrong assumption that only lower case package names are used:
Language packages may use upper case language postfixes eg. _BR.

M  +1    -4    shared/packageinfo.cpp

http://commits.kde.org/kdewin-installer/f6e526a00b5b0aea4db62665c6439205a4496c11