Fixed wrong assumption that only lower case package names are used: Language packages may use upper case language postfixes eg. _BR.

BUG: 313644